# VSB-NAVY

./: .gitignore  README.md
Percepton/: CMakeLists.txt  main.cpp
Percepton/BackPropagation/: NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  NeuronLayer.cpp  NeuronLayer.h
Percepton/NeuralNet/: Neuron.cpp  Neuron.h
